Add parsing of pom and exract repositories